<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.micromobs.android.floatlabel.FloatLabelEditText
        android:id="@id/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_16"
        android:textSize="@dimen/text_size_normal"
        app:hint="@string/street"
        app:textColorHintFocused="@color/hint_focused"
        app:textColorHintUnFocused="@color/hint_unfocused"
        tools:text="@string/placeholder_street"/>

    <com.micromobs.android.floatlabel.FloatLabelEditText
        android:id="@id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/street"
        android:paddingTop="@dimen/padding_16"
        android:textSize="@dimen/text_size_normal"
        app:hint="@string/city"
        app:textColorHintFocused="@color/hint_focused"
        app:textColorHintUnFocused="@color/hint_unfocused"
        tools:text="@string/placeholder_city"/>

    <com.micromobs.android.floatlabel.FloatLabelEditText
        android:id="@id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/city"
        android:paddingTop="@dimen/padding_16"
        android:textSize="@dimen/text_size_normal"
        app:hint="@string/state"
        app:textColorHintFocused="@color/hint_focused"
        app:textColorHintUnFocused="@color/hint_unfocused"
        tools:text="@string/placeholder_state"/>

    <com.micromobs.android.floatlabel.FloatLabelEditText
        android:id="@id/zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/state"
        android:paddingTop="@dimen/padding_16"
        android:textSize="@dimen/text_size_normal"
        app:hint="@string/hint_zipcode"
        app:textColorHintFocused="@color/hint_focused"
        app:textColorHintUnFocused="@color/hint_unfocused"
        tools:text="@string/placeholder_zipcode"/>

    <ImageButton
        android:id="@id/pick_location"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_alignParentRight="true"
        android:layout_below="@id/zipcode"
        android:background="@drawable/flat_button_selector"
        android:src="@drawable/pic_location_selector"/>

</RelativeLayout>